src/test/success/static_string.egern
var test = "testing"

print(test)