src/test/fail/assign_boolean_variable_to_int_fail.egern
var a = false
print(a)
a = 1
print(a)
